exports[`(.not).toHaveSwitchingProtocolsStatus > using axios > .not.toHaveSwitchingProtocolsStatus > fails when response have status code 101 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveSwitchingProtocolsStatus()</intensity>

Expected status code to not be 101 received:
  <red>101</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 101,
  "headers": {
    "connection": "keep-alive"
  },
  "body": ""
}
`;

exports[`(.not).toHaveSwitchingProtocolsStatus > using axios > .toHaveSwitchingProtocolsStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveSwitchingProtocolsStatus()</intensity>

Expected status code to be 101 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveSwitchingProtocolsStatus > using got > .not.toHaveSwitchingProtocolsStatus > fails when response have status code 101 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveSwitchingProtocolsStatus()</intensity>

Expected status code to not be 101 received:
  <red>101</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 101,
  "headers": {
    "connection": "keep-alive"
  },
  "body": ""
}
`;

exports[`(.not).toHaveSwitchingProtocolsStatus > using got > .toHaveSwitchingProtocolsStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveSwitchingProtocolsStatus()</intensity>

Expected status code to be 101 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;
